github pages fix

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "github-identifier",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zhangori000.github.io/verse-miner",
+  "homepage": "https://zhangori000.github.io/verse-miner/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
