--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "github-identifier",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zhangori000.github.io/verse-miner/",
+  "homepage": "https://zhangori000.github.io/verse-miner",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
+    "aos": "^2.3.4",
     "axios": "^0.21.0",
     "free-google-image-search": "^1.0.0",
     "gh-pages": "^3.1.0",
